Icon Image 경로 수정

--- a/src/week2/week2.html
+++ b/src/week2/week2.html
@@ -19,12 +19,12 @@
           <a href="/">
             <span aria-hidden="true">소이정</span>
             <span>
-              <img src="/public/assets/week2/arrow.svg" alt="소이정 홈으로 이동" />
+              <img src="../../public/assets/week2/arrow.svg" alt="소이정 홈으로 이동" />
             </span>
           </a>
 
           <button type="button" class="side-menu">
-            <img src="/public/assets/week2/menu.svg" alt="사이드 메뉴 열기 버튼" />
+            <img src="../../public/assets/week2/menu.svg" alt="사이드 메뉴 열기 버튼" />
           </button>
         </div>
       </header>
