--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./public/favicon.svg" type="image/x-icon" />
     <title>JS Homework</title>
   </head>
   <body style="margin: 3.125rem">
@@ -11,6 +12,9 @@
     <ul>
       <li>
         <a href="./src/week2/week2.html"> 2주차 과제 (아코디언 버튼) </a>
+      </li>
+      <li>
+        <a href="./src/week3/week3.html"> 3주차 과제 (캐러셀) </a>
       </li>
     </ul>
   </body>
