JavaScript 4주차 과제

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li>
         <a href="./src/week3/week3.html"> 3주차 과제 (캐러셀) </a>
       </li>
+      <li>
+        <a href="./src/week4/week4.html"> 4주차 과제 (애니메이션) </a>
+      </li>
     </ul>
   </body>
 </html>
