index.html, README.md 수정

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <li>
         <a href="./src/week4/week4.html"> 4주차 과제 (애니메이션) </a>
       </li>
+      <li>
+        <a href="./src/week5/week5.html"> 5주차 과제 (명함 생성기) </a>
+      </li>
     </ul>
   </body>
 </html>
